# learning_vulkan

./: CMakeLists.txt  README.md  compile_shaders.bat
shaders/src/: simple_shader.frag  simple_shader.vert
src/: application.cpp  application.hpp  main.cpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  window.cpp  window.hpp
